# pose-contact-spec

./: CHANGELOG.md  CONTRIBUTING.md  README.md  REPORT.md  ROADMAP.md  SPEC_INDEX.md  pyproject.toml  requirements.txt
docs/: quickstart.md
examples/: canonical-chair-anchors.yaml  canonical-group.yaml  canonical-human-human.yaml  canonical-human-object.yaml  canonical-minimal.yaml  canonical-multi-relations.yaml  invalid-example.yaml  narrative-projection.txt
schema/: pose-contact.schema.json
spec/: conformance.md  data-model.md  narrative-projection.md  overview.md  relations.md  terminology.md  versioning.md
src/pose_contact_spec/: __init__.py  load.py  pose-contact.schema.json  project.py  validate.py
tests/fixtures/invalid/: actor-additional-field.yaml  anchor-unknown-owner.yaml  invalid-actor-id.yaml  invalid-predicate-pairing.yaml  invalid-predicate.yaml  invalid-schema-version.yaml  missing-body-part-side.yaml  missing-schema-version.yaml  multi-relation-invalid-pairing.yaml  unknown-actor-ref.yaml
tests/fixtures/valid/: minimal-standing.yaml  minimal-touching.yaml  multi-actor-standing-touching.yaml  multi-relations.yaml  object-support-and-touching.yaml  two-actor-handshake.yaml  two-actor-hold-support.yaml
tools/: README.md  validate_examples.py
